<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="10dp"
    tools:context="omniknow.soporte.reportemantenimiento.NuevoReporte">

    <EditText
        android:id="@+id/etAsunto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textMultiLine"
        android:hint="@string/asunto"
        android:importantForAutofill="no" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:baselineAligned="false">

        <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2">

            <TextView
                android:id="@+id/tvTipo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tipo_"
                android:layout_centerHorizontal="true" />

            <Spinner
                android:id="@+id/sTipo"
                android:layout_below="@+id/tvTipo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true" />

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2">

            <TextView
                android:id="@+id/tvEstado"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/estado_"
                android:layout_centerHorizontal="true" />

            <Spinner
                android:id="@+id/sEstado"
                android:layout_below="@+id/tvEstado"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true" />

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1">

            <TextView
                android:id="@+id/tvHoras"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/horas_"
                android:layout_centerHorizontal="true" />

            <EditText
                android:id="@+id/etHoras"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="number"
                android:importantForAutofill="no" />

        </RelativeLayout>

    </LinearLayout>

    <EditText
        android:id="@+id/etDescripcion"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textMultiLine"
        android:hint="@string/descripcion"
        android:importantForAutofill="no" />

    <EditText
        android:id="@+id/etSolucion"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textMultiLine"
        android:hint="@string/solucion"
        android:importantForAutofill="no" />

    <TextView
        android:id="@+id/tvProgramador"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/programador_" />

    <Spinner
        android:id="@+id/sProgramador"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <Button
        android:id="@+id/bGuardar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/guardar"
        android:onClick="guardar"
        android:layout_gravity="end"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cerrar"
        android:onClick="cerrar"
        android:layout_gravity="end"/>

</LinearLayout>